--- a/components/navbar.html
+++ b/components/navbar.html
@@ -13,8 +13,8 @@
         <div class="flex justify-around items-center h-16">
             <!-- Prayer -->
             <a href="prayer.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6 0v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6m2-4h6l3-3m-6 4h.01" />
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+  <path fill-rule="evenodd" d="M9.528 1.718a.75.75 0 0 1 .162.819A8.97 8.97 0 0 0 9 6a9 9 0 0 0 9 9 8.97 8.97 0 0 0 3.463-.69.75.75 0 0 1 .981.98 10.503 10.503 0 0 1-9.694 6.46c-5.799 0-10.5-4.7-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 0 1 .818.162Z" clip-rule="evenodd" />
                 </svg>
                 <span class="text-xs">Prayer</span>
             </a>
