--- a/components/navbar.html
+++ b/components/navbar.html
@@ -35,9 +35,9 @@
             </a>
             <!-- Fitness -->
             <a href="fitness.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12h2M2 12h2m7 9v-3a4 4 0 00-8 0v3h8zM16 12h2m-4 9v-3a4 4 0 00-8 0v3h8zM12 6V4a2 2 0 012-2h4a2 2 0 012 2v2" />
-                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+</svg>
                 <span class="text-xs">Fitness</span>
             </a>
             <!-- More -->
