--- a/components/navbar.html
+++ b/components/navbar.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-100">
 
     <!-- Bottom Navbar -->
-    <nav class="fixed inset-x-0 bottom-0 bg-white shadow-lg border-t border-gray-200 mt-5">
+    <nav class="fixed inset-x-0 bottom-0 bg-white shadow-lg border-t border-gray-200">
         <div class="flex justify-around items-center h-16">
             <!-- Prayer -->
             <a href="prayer.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500 space-y-1">
