--- a/components/header.html
+++ b/components/header.html
@@ -11,9 +11,7 @@
     <!-- Header -->
     <header class="bg-white shadow-md">
         <div class="container mx-auto py-4">
-            <h1 class="text-center text-2xl font-semibold text-gray-800">
-                FaithFlow
-            </h1>
+            <img class="h-12 w-auto mx-auto my-auto" src="../images/faithflow-high-resolution-logo-black-transparent.png" alt="FaithFlow LOGO">
         </div>
     </header>
 
