--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     src: url('/fonts/Arima\ Madurai.ttf');
-    font-family: 'Arima Madurai', cursive, sans-serif;
+    font-family: 'Arima Madurai', sans-serif;
     scrollbar-width: thin;
     scrollbar-color: #8e8e8e #fff;
   }
